JumpScript/tests/baselines/reference/declaredClassMergedwithSelf.errors.txt
tests/cases/conformance/classes/classDeclarations/file1.jump(1,15): error TS2300: Duplicate identifier 'C1'.
tests/cases/conformance/classes/classDeclarations/file1.jump(3,15): error TS2300: Duplicate identifier 'C1'.
tests/cases/conformance/classes/classDeclarations/file1.jump(5,15): error TS2300: Duplicate identifier 'C2'.
tests/cases/conformance/classes/classDeclarations/file1.jump(7,11): error TS2300: Duplicate identifier 'C2'.
tests/cases/conformance/classes/classDeclarations/file1.jump(9,15): error TS2300: Duplicate identifier 'C2'.
tests/cases/conformance/classes/classDeclarations/file2.jump(1,15): error TS2300: Duplicate identifier 'C3'.
tests/cases/conformance/classes/classDeclarations/file3.jump(1,15): error TS2300: Duplicate identifier 'C3'.


==== tests/cases/conformance/classes/classDeclarations/file1.jump (5 errors) ====
    declare class C1 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C1'.
    
    declare class C1 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C1'.
    
    declare class C2 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
    interface C2 {}
              ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
    declare class C2 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
==== tests/cases/conformance/classes/classDeclarations/file2.jump (1 errors) ====
    declare class C3 { }
                  ~~
!!! error TS2300: Duplicate identifier 'C3'.
    
==== tests/cases/conformance/classes/classDeclarations/file3.jump (1 errors) ====
    declare class C3 { }
                  ~~
!!! error TS2300: Duplicate identifier 'C3'.